# LLM-for-dev

./: README.md  pyproject.toml
notebooks/: qdrant-hybrid-search.ipynb  qdrant-semantic-search.ipynb
src/llm_for_dev/: __init__.py
