[project]
name = "llm-for-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Clouder0", email = "clouder0@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colpali-engine>=0.3.8",
    "datasets[vision]>=3.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "litellm>=1.60.0",
    "qdrant-client[fastembed]>=1.13.2",
    "sentence-transformers>=3.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
